--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+    --red: rgb(202, 86, 82);
+    --red-transparent: rgba(255, 255, 255, 0.1);
+    --red-transparent-dark: rgba(0, 0, 0, 0.1);
+    --white: rgb(255, 255, 255);
+}
 /* GENERAL STYLES */
 
 body {
